--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.4"
+    "next": "15.4.4",
+    "axios": "^1.6.0",
+    "react-webcam": "^7.2.0",
+    "lucide-react": "^0.294.0",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
