--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "date-fns": "^2.30.0",
+    "mongodb": "^6.18.0",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
