--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "axios": "^1.6.0",
     "date-fns": "^2.30.0",
+    "express": "^4.18.2",
+    "lucide-react": "^0.263.1",
     "mongodb": "^6.18.0",
+    "multer": "^1.4.5-lts.1",
     "next": "15.4.4",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
