--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "axios": "^1.6.0",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -26,6 +29,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-webcam": "^7.2.0",
+    "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
