--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fullcalendar/core": "^6.1.19",
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/x-date-pickers": "^8.11.3",
-    "@fullcalendar/core": "^6.1.19",
     "axios": "^1.6.0",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
@@ -37,6 +37,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-webcam": "^7.2.0",
+    "recharts": "^3.2.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
